# seam-demo

./: .gitignore  README.md  demo.py  manage.py  mermaid.md  pyproject.toml  reservation.json  scratch.py  seamapi.py
seam/: asgi.py  settings.py  urls.py  wsgi.py
