[tool.poetry]
name = "seam-demo"
version = "0.1.0"
description = ""
authors = ["Alex Rigler <adlrigler.icloud.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
seamapi = "^2.19.0"
django = "^5.0.6"
setuptools = "^69.5.1"
svix = "^1.24.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
